Fix #loadingcontainer not wrapping

--- a/css/jsanimator.css
+++ b/css/jsanimator.css
@@ -223,6 +223,7 @@
     margin-top: auto;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   #loadingtext, #loadingprogress {
     font-size: calc(1.5 * var(--text-size));
